--- a/multistreamstripetablayout/src/main/AndroidManifest.xml
+++ b/multistreamstripetablayout/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.multi_stream_stripe_tab_layout" />
+<manifest package="com.example.multi_stream_stripe_tab_layout" />
